# astrolabe

./: CMakeLists.txt
astrolib/: CMakeLists.txt  argv.cpp  console.cpp  exception.cpp  osmfile.cpp  pbffile.cpp  posix_mmap_file.cpp
astrolib/proto/: README
include/astrolib/: argv.hpp  concurrent.hpp  console.hpp  exception.hpp  index.hpp  meta.hpp  osmfile.hpp  pbffile.hpp  pointer.hpp  types.hpp
include/astrolib/io/: mmap_file.hpp  random_access.hpp
include/astrolib/protobuf/: fileformat.pb.h  osmformat.pb.h
mapindexer/: CMakeLists.txt  main.cpp
source/: main.cpp
